@startuml

title __EXCEPTIONS's Class Diagram__\n

  namespace cern.c2mon.daq.opcua {
    namespace exceptions {
      class cern.c2mon.daq.opcua.exceptions.CommunicationException {
          + CommunicationException()
          + CommunicationException()
      }
    }
  }
  

  namespace cern.c2mon.daq.opcua {
    namespace exceptions {
      class cern.c2mon.daq.opcua.exceptions.ConfigurationException {
          + ConfigurationException()
          + ConfigurationException()
      }
    }
  }
  

  namespace cern.c2mon.daq.opcua {
    namespace exceptions {
      enum ExceptionContext {
        AUTH_ERROR
        BROWSE
        COMMAND_CLASSIC
        COMMAND_TYPE_UNKNOWN
        COMMAND_VALUE_ERROR
        CONNECT
        CREATE_MONITORED_ITEM
        CREATE_SUBSCRIPTION
        DATATAGS_EMPTY
        DELETE_MONITORED_ITEM
        DELETE_SUBSCRIPTION
        DISCONNECT
        EMPTY_SUBSCRIPTION
        HARDWARE_ADDRESS_UNKNOWN
        METHOD
        METHOD_CODE
        NO_REDUNDANT_SERVER
        OBJINVALID
        PKI_ERROR
        READ
        SECURITY
        SERVER_NODE
        URI_MISSING
        URI_SYNTAX
        WRITE
        message
      }
    }
  }
  

  namespace cern.c2mon.daq.opcua {
    namespace exceptions {
      class cern.c2mon.daq.opcua.exceptions.LongLostConnectionException {
          + LongLostConnectionException()
      }
    }
  }
  

  namespace cern.c2mon.daq.opcua {
    namespace exceptions {
      abstract class cern.c2mon.daq.opcua.exceptions.OPCUAException {
          {static} - CONFIG : Collection<Long>
          {static} - DATA_UNAVAILABLE : Collection<Long>
          {static} - NODE_CONFIG : Collection<Long>
          {static} - SECURITY_CONFIG : Collection<Long>
          {static} + isDataUnavailable()
          {static} + isNodeIdConfigIssue()
          {static} + isSecurityIssue()
          {static} + of()
          # OPCUAException()
          # OPCUAException()
      }
    }
  }
  

  cern.c2mon.daq.opcua.exceptions.CommunicationException -up-|> cern.c2mon.daq.opcua.exceptions.OPCUAException
  cern.c2mon.daq.opcua.exceptions.ConfigurationException -up-|> cern.c2mon.daq.opcua.exceptions.OPCUAException
  cern.c2mon.daq.opcua.exceptions.LongLostConnectionException -up-|> cern.c2mon.daq.opcua.exceptions.OPCUAException
  cern.c2mon.daq.opcua.exceptions.OPCUAException -up-|> cern.c2mon.daq.tools.equipmentexceptions.EqIOException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
